--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-native-community/viewpager": "^4.2.0",
     "@react-navigation/bottom-tabs": "^5.11.1",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
@@ -24,6 +25,7 @@
     "react-native-share": "^4.1.0",
     "react-native-svg": "^12.1.0",
     "react-native-svg-transformer": "^0.14.3",
+    "react-native-tab-view": "^2.15.2",
     "react-native-video": "^5.1.0-alpha8",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
